[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".github", "venv", ".venv"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
[project]
name = "system-audit"
version = "3.1.0-dev"
description = "NEO System Audit"
authors = [{ name = "Brad Dotson" }]
requires-python = ">=3.11"

