[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-audit"
version = "3.1.0"
description = "NEO System Audit"
authors = [{ name = "Brad Dotson" }]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
[project.optional-dependencies]
dev = [
  "flake8",
  "black",
  "isort",
  "pytest"
]