[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system_audit"
version = "3.1.0"
description = "Environment audit + system sync setup for NEO protocol machine baselines"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Neo Dotson", email = "bdotsonusn@gmail.com" }]
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
filter_files = true
skip_gitignore = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]